prevent overlapping saves, sketch list bg colors, throttle saves, disable draw and undo while saving, confirm refresh and exit when changes are not saved close #17

--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,7 @@ button.disabled:active {
 }
 
 .skitch-grid a {
+	background: #cc5c4d;
 	display: block;
 	float: left;
 	margin: 0 30px 30px 0;
